@@ -1,3 +1,7 @@
+2014-07-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* build-uclibc.sh: Do not use temporary dir for stage 1 toolchain.
+
 2014-07-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* Makefile.release: Fix broken prebuilt tarballs.
